Moved Supporting Files to subfolder
All functions and supporting files for AOX programs are called from subfolder 'AOX_RequiredSupportFiles'. This cleans up the main 'AOX_BalCal' folder. The only remaining MATLAB files will be the driving scripts to run for AOX_BalCal, AOX_approx, and the automatic data splitter

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,15 @@
 # Prevent subfolders #
 ######################
 */
+!AOX_RequiredSupportFiles
 
 # Random Mac Files #
 ####################
 *.DS_Store
 *.split
+
+
+# Microsoft Office Temporary files #
+#########################
+# Word temporary
+~$*.doc*
