Rename to AOX_Approx
Renamed everything to AOX_Approx from AOX_approx

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@
 #########################
 !AOX_standalone
 !AOX_BalCal_standalone
-!AOX_approx_standalone
+!AOX_Approx_standalone
 !for_redistribution
 !for_redistribution_files_only
 !splash.png
